mongo/overlays/west-2/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: amqps
spec:
  host: inter-router.sku-mongo.apps.west-2.sysdeseng.com
  port:
    targetPort: inter-router
  tls:
    termination: passthrough
  to:
    kind: Service
    name: messaging
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: 'True'
      type: Admitted
